<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:Quiosgrama="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_print"
        android:icon="@drawable/ic_printer_white_36dp"
        android:title="@string/action_print"
        android:visible="false"
        Quiosgrama:showAsAction="always"/>

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_36dp"
        android:title="@string/action_cancel"
        android:visible="false"
        Quiosgrama:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_forward"
        android:icon="@drawable/ic_forward_white_36dp"
        android:title="@string/forward"
        android:visible="false"
        Quiosgrama:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_remove_map"
        android:icon="@drawable/ic_map_marker_off"
        android:title="@string/remove"
        android:visible="false"
        Quiosgrama:showAsAction="always"/>

    <item
        android:id="@+id/action_reset"
        android:icon="@drawable/ic_home_map_marker_white_36dp"
        android:title="@string/reset"
        android:visible="false"
        Quiosgrama:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_zombie_bill"
        android:icon="@drawable/ic_qrcode"
        android:title="@string/zombie_bill"
        android:visible="false"
        Quiosgrama:showAsAction="always"/>
    
</menu>