<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:Quiosgrama="http://schemas.android.com/apk/res-auto" >
    
    <item
        android:id="@+id/action_search_poi"
        android:icon="@drawable/ic_info_white"
        android:title="@string/action_search_poi"
        android:visible="true"
        Quiosgrama:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/action_search_table"
        android:icon="@drawable/ic_action_map"
        android:title="@string/action_search_table"
        android:visible="true"
        Quiosgrama:showAsAction="always"/>
    
    <item
        android:id="@+id/action_cancel"
        android:icon="@drawable/ic_cancel"
        android:title="@string/action_cancel_map"
        android:visible="false"
        Quiosgrama:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_next_plus"
        android:icon="@drawable/ic_next_plus"
        android:title="@string/action_next_plus"
        android:visible="false"
        Quiosgrama:showAsAction="always"/>
    
</menu>