<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_shape"
        android:padding="10dp"
        android:text="@string/action_filter"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />

    <RadioGroup
        android:padding="@dimen/default_layout_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:id="@+id/radioAllRequests"/>

        <RadioButton
            android:id="@+id/radioMyRequests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_requests" />
    </RadioGroup>

    <View style="@style/Divider"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_layout_margin">

        <RadioButton
            android:id="@+id/radioAll"
            android:checked="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all"/>

        <RadioButton
            android:id="@+id/radioSent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sent" />

        <RadioButton
            android:id="@+id/radioVisualized"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/visualized" />


        <RadioButton
            android:id="@+id/radioReady"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ready" />
    </RadioGroup>

</LinearLayout>